# ChocoForestWatch

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  setup_database.sql
.claude/commands/: ship-to-main.md
.github/workflows/: deploy.yml  test.yml
backend/: app.py  manage.py  requirements.txt
backend/djangocfw/: Dockerfile  entrypoint.sh  manage.py  requirements.txt  wait_for_db.py
backend/djangocfw/core/: admin.py  auth_views.py  consumers.py  dataset_service.py  datasets.json  models.py  routing.py  serializers.py  storage.py  urls.py  views.py
backend/djangocfw/djangocfw/: asgi.py  settings.py  urls.py  version.py
backend/migrations/versions/: 4e6df3cde2c0_add_deforestation_hotspots.py
backend/rasters/: Planet area of interest 2023_01_19.geojson
docs/: README.md
docs/model-training/: forest-flag-algorithms.md  model-fitting-process.md
docs/setup/: umami-analytics.md
docs/training-polygons/: README.md
docs/workflows/: data-processing.md  gfw-deforestation-alerts.md  ml-pipeline.md  versioning-system.md  western-ecuador-stats-caching.md
frontend/: .dockerignore  Dockerfile  docker-entrypoint.sh  nginx.conf  package-lock.json  package.json  quasar.config.js
frontend/public/data/: Ecuador-DEM-900m-contour.geojson
frontend/src/: App.js  App.vue  main.js
frontend/src/boot/: index.js
frontend/src/components/: AOIDefinition.vue  AOIFloatingCard.vue  Analysis.vue  AnalysisResultsDialog.vue  BaseMapComponent.vue  BasemapDateSelector.vue  BasemapDateSlider.vue  CustomLayerSwitcher.vue  DataTable.vue  DrawPolygons.vue  DrawingControlsCard.vue  FileUploadCard.vue  LandCoverStats.vue  LoadTrainingSetDialog.vue  MapComponent.vue  MapLegend.vue  ModelEvaluationDialog.vue  ModelTrainingDialog.vue  NavigationBar.vue  PolygonListCard.vue  Prediction.vue  PredictionDialog.vue  PredictionList.vue  ProjectManagement.vue  ProjectSelectionDialog.vue  ProjectWizard.vue  Projects.vue  ReviewPolygons.vue  Training.vue  TrainingOptionsCard.vue  TrainingProgress.vue  TrainingSetEditor.vue  TrainingSetManager.vue  TrainingStoreDebug.vue  UploadData.vue  (+1 more)
ml_pipeline/: TESTING.md  ml_specifications.md  pyproject.toml  pytest.ini  run_tests.sh
ml_pipeline/notebooks/: README_GEE_Downloader.md  create_composite 2025_05_19.py  create_stac.py  debug_cog_filtering.ipynb  gee_dataset_downloader.py  gee_downloader_examples.py  process_forest_cover_rasters.py  process_gfw_alerts.py  run_benchmarks_only.py  run_train_predict_pipeline.py  test.py  test_benchmarks 2025_05_19.py  test_forest_algorithms.py  test_forest_cover_processing.py  train_and_predict_by_month.py  upload_gfw_alerts_to_local.py
ml_pipeline/notebooks/utils/: __init__.py  cog_processor.py
ml_pipeline/src/ml_pipeline/: benchmark_metrics_io.py  benchmark_tester.py  composite_generator.py  db_utils.py  extractor.py  feature_engineering.py  hyperparameter_tuner.py  polygon_loader.py  prediction_worker.py  predictor.py  raster_utils.py  run_manager.py  s3_utils.py  stac_builder.py  summary_stats.py  trainer.py  tuning_configs.py  tuning_reporter.py  version.py
ml_pipeline/tests/: __init__.py  conftest.py  test_simple_example.py
ml_pipeline/tests/integration/: test_benchmark_tester_integration.py  test_predictor_integration.py
ml_pipeline/tests/unit/: test_benchmark_tester_unit.py  test_predictor_unit.py  test_s3_utils_unit.py
scripts/: README.md  build_benchmarks_STAC.py  build_nicfi_STAC.py  migrate_nicfi_data.sh  precalculate_stats.py
titiler-pgstac/: docker-compose.yml
titiler/scripts/: build_all_mosaics.sh  build_stac.sh
(+83 files in other folders)
